--- a/.github/workflows/run-notebook.yml
+++ b/.github/workflows/run-notebook.yml
@@ -13,14 +13,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
+      # ✅ Removed setup-python since it's not compatible with your self-hosted Debian 11 runner
 
       - name: Install dependencies
         run: |
-          pip install papermill jupyter
+          python3 -m pip install --upgrade pip
+          pip install papermill google-cloud-storage
 
       - name: Run Papermill script
         run: |
